troubleshooting issues on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
+  /* @media screen and (max-width: 900px) {
+    padding: 0 3px;
+  } */
 }
 
 .app {
