--- a/src/Components/Testimonial-Cards/Testimonials.css
+++ b/src/Components/Testimonial-Cards/Testimonials.css
@@ -19,8 +19,8 @@
   grid-row: 1/3;
 
   display: grid;
-  grid-template-rows: subgrid;
-  grid-template-columns: subgrid;
+  /* grid-template-rows: subgrid;
+  grid-template-columns: subgrid; */
 }
 .card__primary-subgrid {
   margin-bottom: 14rem;
@@ -34,6 +34,7 @@
   grid-row: 2/4;
   align-items: center;
   box-shadow: 3px 3px var(--color--layout-dark);
+  height: 90%;
 }
 
 .card__secondary-content {
